[package]
name = "gfatk"
version = "0.2.1"
edition = "2021"

description = """
gfatk is a command line tool for manipulating small to medium sized
GFA files, and specifically for output from the genome assembler MBG.
"""

documentation = "https://github.com/tolkit/gfatk"
homepage = "https://github.com/tolkit/gfatk"
repository = "https://github.com/tolkit/gfatk"
keywords = ["gfa", "gfatk", "assembly", "genome"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
gfa = "0.10"
bstr = "0.2"
clap = { version = "3.1.5", features = ["cargo"] }
petgraph = "0.6.0"
byteorder = "1.4.3"
indexmap = "1.7.0"
itertools = "0.10.2"
anyhow = "1.0"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"