[package]
name = "gfatk"
version = "0.2.3"
edition = "2021"

description = """
gfatk is a command line tool for manipulating small to medium sized
GFA files, and specifically for output from the genome assembler MBG.
"""

documentation = "https://github.com/tolkit/gfatk"
homepage = "https://github.com/tolkit/gfatk"
repository = "https://github.com/tolkit/gfatk"
keywords = ["gfa", "gfatk", "assembly", "genome"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
bstr = "1.4.0"
petgraph = "0.6.0"
byteorder = "1.4.3"
itertools = "0.10.2"
anyhow = "1.0"
atty = "0.2"
gfa = "0.10.1"
clap = { version = "4.2.1", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "3.0.2"
